# sotu

./: LICENSE  README.md  pyproject.toml  scrape.py
data/sotu/: 1790-01-08.json  1790-12-08.json  1791-10-25.json  1792-11-06.json  1793-12-03.json  1794-11-19.json  1795-12-08.json  1796-12-07.json  1797-11-22.json  1798-12-08.json  1799-12-03.json  1800-11-22.json  1913-12-02.json  1914-12-08.json  1915-12-07.json  1916-12-05.json  1917-12-04.json  1918-12-02.json  1921-12-06.json  1922-12-08.json  1923-12-06.json  1934-01-03.json  1935-01-04.json  1936-01-03.json  1937-01-06.json  1938-01-03.json  1939-01-04.json  1940-01-03.json  1941-01-06.json  1942-01-06.json  1943-01-07.json  1947-01-06.json  1948-01-07.json  1949-01-05.json  1950-01-04.json  1951-01-08.json  1952-01-09.json  1953-02-02.json  1954-01-07.json  1955-01-06.json  (+59 more)
