[tool.poetry]
name = "sotu"
version = "0.1.0"
description = "State of the Union Scraper"
authors = ["Tim Showers <showerst@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
cssselect = "^1.2.0"
python-dateutil = "^2.8.2"
lxml = "^4.9.3"
dataclasses-json = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
